feat(endpoints): Inbound PUT authorizations handler
