# src/interface/api.yaml
@@ -386,12 +386,7 @@ paths:
       description: |
         The HTTP request `POST /thirdpartyRequests/transactions/{id}/authorizations` is used by the DFSP to verify a third party authorization.
       parameters:
-        - name: ID
-          in: path
-          required: true
-          schema:
-            type: string
-          description: The identifier value.
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions~1%7BID%7D~1authorizations/put/parameters/0'
         - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/0'
         - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/1'
         - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/2'
@@ -416,6 +411,63 @@ paths:
               consentId: 8d34f91d-d078-4077-8263-2c0498dhbjr
               sourceAccountId: dfspa.alice.1234
               status: PENDING
+      responses:
+        '202':
+          $ref: '#/paths/~1thirdpartyRequests~1transactions/post/responses/202'
+        '400':
+          $ref: '#/paths/~1health/get/responses/400'
+        '401':
+          $ref: '#/paths/~1health/get/responses/401'
+        '403':
+          $ref: '#/paths/~1health/get/responses/403'
+        '404':
+          $ref: '#/paths/~1health/get/responses/404'
+        '405':
+          $ref: '#/paths/~1health/get/responses/405'
+        '406':
+          $ref: '#/paths/~1health/get/responses/406'
+        '501':
+          $ref: '#/paths/~1health/get/responses/501'
+        '503':
+          $ref: '#/paths/~1health/get/responses/503'
+    put:
+      tags:
+        - thirdpartyRequests
+        - sampled
+      operationId: UpdateThirdpartyAuthorization
+      summary: UpdateThirdpartyAuthorization
+      description: |
+        The HTTP request `PUT /thirdpartyRequests/transactions/{id}/authorizations` is used by the auth-service to update a thirdparty authorization after successful validation.
+      parameters:
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The identifier value.
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/1'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/2'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/3'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/4'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/5'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/6'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/7'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/8'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/9'
+        - $ref: '#/paths/~1thirdpartyRequests~1transactions/post/parameters/10'
+      requestBody:
+        description: The thirdparty authorization details to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateThirdpartyAuthorizationRequest'
+            example:
+              challenge: <QuoteResponse object>
+              value: <base64 encoded binary - the signed quote response object>
+              consentId: 8d34f91d-d078-4077-8263-2c0498dhbjr
+              sourceAccountId: dfspa.alice.1234
+              status: VERIFIED
       responses:
         '202':
           $ref: '#/paths/~1thirdpartyRequests~1transactions/post/responses/202'
@@ -977,6 +1029,38 @@ components:
           enum:
             - PENDING
           description: The status of the authorization. This MUST be PENDING for a POST request
+      required:
+        - challenge
+        - value
+        - consentId
+        - sourceAccountId
+        - status
+    UpdateThirdpartyAuthorizationRequest:
+      title: UpdateThirdpartyAuthorizationRequest
+      type: object
+      description: 'The object sent in the PUT /thirdpartyRequests/transactions/{id}/authorizations request.'
+      properties:
+        challenge:
+          type: string
+          description: The original Challenge Object as a JSON string
+        value:
+          allOf:
+            - $ref: '#/components/schemas/VerifyThirdPartyAuthorizationRequest/properties/value/allOf/0'
+          description: Base64 encoded binary string - the signed challenge
+        consentId:
+          allOf:
+            - $ref: '#/components/schemas/ThirdpartyTransactionRequest/properties/consentId/allOf/0'
+          description: |
+            Common ID between the PISP and FSP for the Consent object This tells DFSP and auth-service which constent allows the PISP to initiate transaction.
+        sourceAccountId:
+          allOf:
+            - $ref: '#/components/schemas/AccountId'
+          description: 'DFSP specific account identifiers, e.g. `dfspa.alice.1234`'
+        status:
+          type: string
+          enum:
+            - VERIFIED
+          description: The status of the authorization. This MUST be VERIFIED for a PUT request
       required:
         - challenge
         - value
